<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">TrafficJamDroid</string>
	<string name="jam">Störung</string>
	<string name="search">Suchen</string>
	<string name="route">neue Route</string>
	<string name="routedialog">Wählen Sie ein Ziel</string>
	<string name="prefs">Einstellungen</string>
	<string name="alert_jam">Störung melden</string>
	<string name="help">Hilfe</string>
	<string name="dsc_jam_jam">Stau</string>
	<string name="dsc_jam_event">Großveranstaltung</string>
	<string name="dsc_jam_crash">Unfall</string>
	<string name="dsc_jam_ice">Glatteis</string>
	<string name="dsc_jam_general">Allgemeine Gefahr</string>
	<string name="dsc_jam_construction">Baustelle</string>
	<string name="pref_cat_server">Server</string>
	<string name="dsc_jam_position">Position</string>

	<string name="pref_title_server">Server</string>
	<string name="pref_summary_server">IP-Adresse unter der der Server zu erreichen ist
	</string>
	<string name="pref_summary_port">Portnummer des Servers</string>
	<string name="pref_title_port">Port</string>

	<string name="pref_cat_gps">Datensicherheit</string>
	<string name="pref_summary_send">Wollen Sie die eigene Position an den Server
		senden?</string>
	<string name="pref_title_send">Eigene Position</string>
	<string name="pref_title_update">Aktualisierungsrate</string>
	<string name="since">gemeldet am</string>
	<string name="pref_summary_update">Frequenz in der die Daten aktualisiert werden in
		Sekunden</string>
	<string name="delete_congestion">Meldung wird gelöscht</string>
	<string name="delete_route">Route wird gelöscht</string>
	<string name="new_route">neue Route</string>
	<string name="dsc_route_startposition">Startposition</string>
	<string name="dsc_route_currentposition">aktuelle Position</string>
	<string name="search_address">Position/Adresse suchen</string>
	<string name="submit">Übernehmen</string>
	<string name="cancel">Abbrechen</string>
	<string name="pref_title_data">anzuzeigende Daten</string>
	<string name="pref_summary_data">Für welchen Umkreis sollen die Daten ermittelt
		werden?</string>
	<string name="delete_congestion_question">Soll die gewählte Meldung wirklich gelöscht werden?</string>
	<string name="delete_route_question">Soll die aktuelle Route wirklich gelöscht werden?</string>
	<string name="soi_quality_0">letzte Stunde</string>
	<string name="soi_quality_1">gleicher Wochentag</string>
	<string name="soi_quality_2">alle Daten</string>
	<string name="soi_speed">Geschwindigkeit</string>
	<string name="soi_tempolimit">Tempolimit</string>
	<string name="soi_quality">Aktualität</string>
	<string name="soi_unknown">unbekannt</string>
	<string name="problems">Probleme</string>
	<string name="yes">Ja</string>
	<string name="no">Nein</string>
	<string name="ok">OK</string>
	<string name="alert_prob">Erkannte Probleme</string>
	<string name="popup_search_problems">Probleme werden ermittelt &#8230;</string>
	<string name="popup_visualize_problems">Probleme werden visualisiert &#8230;</string>
	<string name="popup_calculate_route">Route wird berechnet &#8230;</string>
	<string name="popup_no_route_available">Es konnte keine Route ermittelt werden!</string>
	<string name="popup_generate_info">Ermittle Straßeninformationen &#8230;</string>
	<string name="popup_new_route">Wollen Sie ihre aktuelle Route wirklich löschen?</string>
	<string name="popup_route_finished">Sie haben ihr Ziel erreicht!</string>
	<string name="alert_help">Online-Hilfe</string>
	<string name="dsc_calc_route">Route berechnen</string>


</resources>